src/styles/loginRegister.scss
@import url(global.scss);
.loginRegister{
    display: flex;
    width: 100%;
    height: 100%;
    justify-content: center;
    align-items: center;

    .glass-card{
        max-width:450px;
    }
    
    h4{
        font-size: 1rem;
        cursor: pointer;
        margin-top: 15px;
    }
    button{
        margin-top: 10px;
    }

    .form-title{
        font-size: 3rem;
        font-weight: 600;
        padding: 10px 0px;
    }

    .btn-container{
        button{
            all:unset;
            text-decoration: underline;
            cursor: pointer;
            font-size: 1rem;
            font-weight: 300;
            padding: 10px 0px;
        }
    }

    .cloudinary-button {
        all:unset;
        text-decoration: underline;
        cursor: pointer;
        font-size: 1rem;
        font-weight: 300;
        padding: 10px 0px;
    }
    
}

